[JBIDE-26460] replaced javax.xml.bind.DatatypeConverter by jdk8 means (#1823)
* [JBIDE-26460] switched to openshift-restclient-java 7.0.1

Signed-off-by: Andre Dietisheim <adietish@redhat.com>

* [JBIDE-26460] replaced javax.xml.bind.DatatypeConverter by jdk8 means

Signed-off-by: Andre Dietisheim <adietish@redhat.com>